[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://DefaultEnvironment.tres" type="Environment" id=2]
[ext_resource path="res://Scripts/DebugTimer.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/Nocturnal (8 Bit Jazz).ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/FinalHit.wav" type="AudioStream" id=5]
[ext_resource path="res://Packed/Tree2.tscn" type="PackedScene" id=6]
[ext_resource path="res://Packed/Tree3.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Textures/Texture2.png" type="Texture" id=8]
[ext_resource path="res://Packed/Player.tscn" type="PackedScene" id=9]

[sub_resource type="AudioStreamRandomPitch" id=1]

audio_stream = ExtResource( 4 )
random_pitch = 1.1

[sub_resource type="CubeMesh" id=2]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector3( 2, 2, 2 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[sub_resource type="SpatialMaterial" id=3]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 1, 1, 1 )
albedo_texture = ExtResource( 8 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo" ]

[sub_resource type="BoxShape" id=4]

extents = Vector3( 1, 1, 1 )

[node name="RootLevel" type="Spatial" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.345118, 0 )

[node name="GameManager" type="Spatial" parent="." index="0"]

script = ExtResource( 1 )

[node name="PreWavePos" type="Spatial" parent="GameManager" index="0"]

transform = Transform( 1, 0, 0, 0, 0.909043, 0.416702, 0, -0.416702, 0.909043, 0, 1.24977, -1.44595 )

[node name="NextWaveWait" type="Timer" parent="GameManager" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Enemies" type="Spatial" parent="." index="1"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="2"]

environment = ExtResource( 2 )

[node name="Sun" type="DirectionalLight" parent="WorldEnvironment" index="0"]

transform = Transform( 0.766045, 0.321394, -0.55667, 1.0076e-007, 0.866025, 0.5, 0.642788, -0.383022, 0.663414, 0, 11.7937, 0 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 0.4
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Light" ]

[node name="DebugTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false
script = ExtResource( 3 )

[node name="EnvironmentSounds" type="Spatial" parent="." index="4"]

[node name="Music" type="AudioStreamPlayer" parent="EnvironmentSounds" index="0"]

stream = SubResource( 1 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="FinalHit" type="AudioStreamPlayer" parent="EnvironmentSounds" index="1"]

stream = ExtResource( 5 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="EnvironmentFeatures" type="Spatial" parent="." index="5"]

[node name="Tree2" parent="EnvironmentFeatures" index="0" instance=ExtResource( 6 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.757128, 0, 5.52251 )
_sections_unfolded = [ "Transform" ]

[node name="Tree3" parent="EnvironmentFeatures" index="1" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.154 )

[node name="LevGround" type="StaticBody" parent="." index="6"]

transform = Transform( 40.962, 0, 0, 0, 0.25, 0, 0, 0, 40.962, 0, 0, 0 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="LevGround" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.224327, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = SubResource( 3 )
_sections_unfolded = [ "Transform", "material" ]

[node name="CollisionShape" type="CollisionShape" parent="LevGround" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.256514, 0 )
shape = SubResource( 4 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="HiCorner" type="Spatial" parent="LevGround" index="2"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.00086, 7.62939e-006, 0.997036 )
_sections_unfolded = [ "Transform" ]

[node name="LoCorner" type="Spatial" parent="LevGround" index="3"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.00428, 0, -1.00509 )
_sections_unfolded = [ "Transform" ]

[node name="Player" parent="." index="7" instance=ExtResource( 9 )]

[connection signal="timeout" from="GameManager/NextWaveWait" to="GameManager" method="_on_NextWaveWait_timeout"]

[connection signal="timeout" from="DebugTimer" to="DebugTimer" method="_on_DebugTimer_timeout"]


